# aa-battles

./: .gitignore  Cargo.toml  results.txt
.github/: dependabot.yml
src/: enums.rs  format_results.rs  lib.rs  main.rs  types.rs  util.rs
src/battle/: battle.rs  determine_win_conditions.rs  do_battle.rs  mod.rs
src/battle/tick/: attack.rs  check_in_range.rs  march.rs  mod.rs  range_find.rs  run_tick.rs  spawn_attack_threads.rs  sync_attack.rs
src/battle/tick/attack_phase/: attack.rs
src/battle/tick/mocks/: mod.rs  tick_mocks.rs
src/battle/tick/phases/: attack.rs  attack_new.rs  march.rs  mod.rs  range_find.rs
src/battle/tick/phases/attack/: armor_defense.rs  attack_phase.rs  block.rs  dodge.rs  mod.rs
src/db/: db.rs
src/entities/: army.rs  ending_battalion_stats.rs  game_defaults.rs  mod.rs  nation.rs
src/entities/battalion/: battalion.rs  methods.rs  mod.rs
src/entities/battle/: battle.rs  methods.rs  mod.rs
src/entities/battle_army/: battle_army.rs  methods.rs  mod.rs
src/entities/battle_result/: battle_result.rs  methods.rs  mod.rs
src/entities/nation_army/: methods.rs  mod.rs  nation_army.rs
src/entities/testing_entities/: mod.rs  partial_battalion_for_testing.rs
src/match_up/: create_mocks.rs  match_up.rs  mock_default_army_vec.rs  mod.rs
src/mocks/: game_defaults.rs  mod.rs  nation_army.rs
src/service/: query.rs
