[package]
name = "aa-battles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
dotenvy = "0.15.7"
mockall = "0.11.4"
rand = "0.8.5"
reqwest = { version="0.11.18", features =  ["json"] }
serde = { version ="1.0.164", features = ["derive"] }
serde-this-or-that = "0.4.2"
serde_json = "1.0.99"
strum = {version = "0.25.0", features = ["derive"]}
strum_macros = "0.25.1"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
