[package]
name = "aa-battles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.86"
color-eyre = "^0.6.3"
dotenvy = "0.15.7"
mockall = "^0.13"
num-format = "0.4.4"
rand = "0.8.5"
serde = { version ="^1.0.214", features = ["derive"] }
serde-this-or-that = "^0.4.2"
serde_json = "^1.0.128"
strum = {version = "^0.26.3", features = ["derive"]}
strum_macros = "^0.26.4"
thiserror = "^1.0.63"
